# ChangeLog for dev-ruby/test_declarative
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/test_declarative/ChangeLog,v 1.14 2014/11/26 02:26:23 mrueg Exp $

  26 Nov 2014; Manuel Rüger <mrueg@gentoo.org> test_declarative-0.0.5-r2.ebuild:
  Drop jruby target.

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> test_declarative-0.0.5-r2.ebuild:
  Remove trailing '.' from DESCRIPTION.

  22 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  test_declarative-0.0.5-r2.ebuild:
  Keyworded on alpha, bug #501152

  18 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  test_declarative-0.0.5-r2.ebuild:
  Add ruby21.

  02 Nov 2013; Manuel Rüger <mrueg@gentoo.org>
  -test_declarative-0.0.5-r1.ebuild, -test_declarative-0.0.5.ebuild:
  Cleanup old.

*test_declarative-0.0.5-r2 (05 Oct 2013)

  05 Oct 2013; Manuel Rüger <mrueg@gentoo.org>
  +test_declarative-0.0.5-r2.ebuild:
  Add ruby20 target.

  16 Jan 2013; Rick Farina <zerochaos@gentoo.org>
  test_declarative-0.0.5-r1.ebuild, test_declarative-0.0.5.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

*test_declarative-0.0.5-r1 (26 Jul 2012)

  26 Jul 2012; Hans de Graaff <graaff@gentoo.org>
  test_declarative-0.0.5.ebuild, +test_declarative-0.0.5-r1.ebuild:
  Revision bump to create a stable candidate without rbx.

  01 May 2012; Raúl Porcel <armin76@gentoo.org> test_declarative-0.0.5.ebuild:
  Drop ia64/sparc keywords

  26 Oct 2011; Hans de Graaff <graaff@gentoo.org>
  test_declarative-0.0.5.ebuild:
  Move to EAPI=4 to fix deprecations. Add ruby19, rbx.

  24 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  test_declarative-0.0.5.ebuild:
  Marked ~ppc/~ppc64 wrt #351835

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> test_declarative-0.0.5.ebuild:
  Add ~ia64/~sparc/~x86 wrt #355697

  25 Feb 2011; Jeroen Roovers <jer@gentoo.org> test_declarative-0.0.5.ebuild:
  Marked ~hppa (bug #355697).

*test_declarative-0.0.5 (20 Feb 2011)
