@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST test_declarative-0.0.5.tgz 2114 SHA256 b6c27a2c26f85ce5d8df20c66bad4ade67f2ef6b8fe2f7a8b7ae348b460ad83a SHA512 69641a56c38403a86a8562910aa5ab433476351cc0e5a1f2a640030bfb4f82b96bf724d911ce46ff75dfe934de50d6549304088ee85d5689990e0ce5d263c160 WHIRLPOOL 6aa10e278fc0c8c2524fbd749fd830905ea5a123980b876610ca3d00e04045de9d0697aae1b912487ae6d5f06e9b1166a39f85fcbfd63de0395cb81dd716ed83
-EBUILD test_declarative-0.0.5-r2.ebuild 818 SHA256 09b2dac444687c34db6feaad31c07da8c83bb95305c93e6e001f2fe3384ad25d SHA512 7ca0ca62eac2501da955623d0f38004e0d4e42ed95e06351e9c104d4dba099040170099e3139f8b3f6410079476e37c407f77bb51d646e2dbecece1dc9006dd1 WHIRLPOOL b2182b650d5798e8583e854b331548b4896cf78310e14f99261220a3ee15bba62767ea2d7a27f88da3f9390d2bbe8e167e350943aa5afbe0af9bd0e2d861300d
-MISC ChangeLog 2135 SHA256 4c8f1249551614092b38a95e8f93d882e46f37e5c525b544667e195c4b75df8a SHA512 136bf75ae11815ef45f099a8c2f2c3e8c5d86b2b2541a84c55af13ade7be579dcac3c1e22e143b85e3188531c019304453de467a73682e7cf5855101a213687c WHIRLPOOL 8b52a44c4c5f0870ff677bffa28039351f5d615fe9e549b67604c7c823f6fbd30ead8445c838380e35ea51408a63493534792af5f759952314cbff53649641f6
+EBUILD test_declarative-0.0.5-r2.ebuild 866 SHA256 db4b0916c565547b1ce86453e083ecf2f9b0b483487c5997179f4861b7680bf9 SHA512 556e4019e3d98265e812b08d66e41d3c5c9193a260330ee3276e6fc306f79ab3462d43bf5d0df3fc4b9450b51a6f77068229406c40dae69001fc99ab2f070ef6 WHIRLPOOL b1c09f6d7c5333c8c965e922891c56b962409ae55e87e9216326100352eff1c0fa687d7767f98f023e453a4089fe60c1dd67b5f226b57ab3e82c715c4b2bbf04
+MISC ChangeLog 2259 SHA256 cdf6e18dd7e5e880a7ff402b79b9a38023d5390bd1e44aabe33e40f3eeea4606 SHA512 720c0cee6e8579b157b9b314ed1c9b6b87a3803f110fc60a79817a6cf5b333e624a2dc7d6da4548f025294220fbcbd924091c2c0c3159ccb8f2ac0bf2c9163c7 WHIRLPOOL e5b0c32586a0bd2cb8b88952974b1a19d4774e0721d598fa4e51633f9139ce4f2f7666d1c5d53b0d75d1cc2026b687fcddf3e4600642509f81c2be302a47c40c
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlU/2g0ACgkQiIP6VqMIqNc71AD9F1wuMF7aMHnhuBo2SNdQTFmM
+VnpM7yAmbgkFJvX5ziYA/1WmsXSGNblcFhWwvLkylGpbG5xHLRIbMf1VclpZbM3+
+=2+nI
+-----END PGP SIGNATURE-----
