@@ -3,14 +3,14 @@ Hash: SHA256
 
 DIST ttfunk-1.2.1.tar.gz 733233 SHA256 49eddc8bc69ea2d829a08f0f753590291b3ac88b7e5e57c58cb2080aa70c0b9f SHA512 81e468a298ed0b4574573f0b6f5b23db73a32b8070520d5d143bc178d8e20cb4af4064476d7377d98301941765f24d6eeeb8ab3590878bf89531c1f729b7e97b WHIRLPOOL e3aee071bca615fd580cf21ec5f2ad3a5f44419a67d723c9aca1d1a3cb25cd22c0eee00d3aeaf8ef53361aa1588a3b0ffdf4c6cc61ddf37cf402c3048d4910c2
 DIST ttfunk-1.4.0.tar.gz 784076 SHA256 866abb6e808ef9ef92b2e9560e03913f613104dd60a2fbe7f6d1a66a2f41f8c7 SHA512 369c7230c3e1eee57f0fba77cf2bc67c3ef6c6a1d2ba0280e1c6776ea1a6aaffafd2cb1f1d410f7be9d594c640d6afa4fc985c4eea85938d2feb37c3c7886295 WHIRLPOOL e48d02eda78af068e99bea403b80f41328b160a29752738990df23596ad83b0b3c226434d3039aa70cabe0ce9f7f59cacb6193cc43b34a8baef1571c22a11444
-EBUILD ttfunk-1.2.1.ebuild 805 SHA256 361e53d3d5becd687e4f26cc86ef76c0d18714856e4040b2b5c72ef75cccf2a0 SHA512 805a932f287244c417895a924d11bfd5bf0ef4779b5e1adda145f89056f644a280d85a1f3b9e73a85531815cd98001f177df7924aa350e676313633fd257de53 WHIRLPOOL 2363356d5e106bebbe27c74d334f9a487c79588d25e50d14ba94c41744cb05baa48f3177cbfb0305bb6b370f3e83af777218b9b9b2f6736bb21d823be5ddba46
+EBUILD ttfunk-1.2.1.ebuild 813 SHA256 c6f7bb8d8d579aede22325985f9916196b0d74f00d77de310ffd2526a772f1f3 SHA512 1ec7fcccd2137a18ad4b45f51455fef26a96e51e172fa6383812c3745254c3d77911af3fb34d8c068746737945fc1bc8be2d00c9f09fdb11028cea6863d029f4 WHIRLPOOL 88e66302071a7a61ea174544d44bc6b970cb24054d07f0da476b9571edf087fc7ae5b57b525ae36256428dbd829b001d05db059f6460ee06b5eae1bcc8436071
 EBUILD ttfunk-1.4.0.ebuild 813 SHA256 38c1bd744b106cf40e7c7d5f6f76d72d3b768820149b721c7a6206ff3e7236d9 SHA512 6e5909241d85070732a4041c04ca2209c48b58f4d1c440172a1004d02749ac24f3560f7d3aa89c5472d539d670ea787f25802b58b477fd6709fb33b53b0b68af WHIRLPOOL 85d071d20790a61eac76552cc713cb8f1d4fabcf2d0b865c87726db9e08e57c5e6514bf39e1db76b57d9db9fd282172a6c8bc5734b68783becd2bd2633a58494
-MISC ChangeLog 2436 SHA256 035627c353b7b7a19122012d66df0675666ed62df4c9212feec34d78d49b1e5f SHA512 fef03080cfe2e85933a977853de5d599272e6c0cd51d2c60e07436a0c79bda88095f3a8863bc0d8082140ddef6f2dd5a70e18ebdc3ded9a5c9bd689a44bafc0a WHIRLPOOL df22622f96650a0f6998596e6dbdbfa7dfa7feb44eaf08668e24f8fdb0b7d7db52366ab82d5d5762fbc7579051ec6090ddcfa98d4a2fe105add52be185e28d92
+MISC ChangeLog 2522 SHA256 78864423819cb26f09370eaf142707c72db93de6c234f090423e1a0285bb09e9 SHA512 a98ebb633d65491532f03fec76a8e349d89cdb1c8ee641940dd53cb80d8cff8ddd8f7432259e1f6061c2627c7d9d9debbb9b7fcefd5120a78921a44f5fa54b14 WHIRLPOOL 52f380aab935c55919d586e2466f2780903ede7d681e163fca503b64007e2bdfdf511244a84d9e4a938b2453f16b9ca2f2927192963df7d7cbeee9b9ff6bed9c
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUqFw8ACgkQiIP6VqMIqNdF5AD8DHUXTv+c9T5DII8I7mZz+276
-8PDIxjqNZnW/usxxc/gA/1RgseqM+nX7Z/UG5lp9z2wdxMxKmbgcKLSyulJ2Luwz
-=grGT
+iF4EAREIAAYFAlU/2m0ACgkQiIP6VqMIqNesOwD+OpaGhozyouqSlOle18vRPRia
+aUeBmoXUXcxkYQTzzywA/0jb7n1HZESzdrs45e7OH1aZNniKpgI2icGRm9OM9Z/V
+=TM9O
 -----END PGP SIGNATURE-----
