@@ -1,9 +1,9 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ttfunk/ttfunk-1.2.1.ebuild,v 1.2 2014/11/10 15:59:07 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ttfunk/ttfunk-1.2.1.ebuild,v 1.3 2015/04/28 19:07:24 graaff Exp $
 
 EAPI=5
-USE_RUBY="ruby19 ruby20 ruby21"
+USE_RUBY="ruby19 ruby20 ruby21 ruby22"
 
 RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_RECIPE_TEST="rspec"
