@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ttfunk
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ttfunk/ChangeLog,v 1.21 2015/04/12 06:56:14 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ttfunk/ChangeLog,v 1.22 2015/04/28 19:07:24 graaff Exp $
+
+  28 Apr 2015; Hans de Graaff <graaff@gentoo.org> ttfunk-1.2.1.ebuild:
+  Add ruby22.
 
   12 Apr 2015; Hans de Graaff <graaff@gentoo.org> -ttfunk-1.0.3-r1.ebuild,
   -ttfunk-1.1.1.ebuild, -ttfunk-1.2.0.ebuild:
